<resources>
    <string name="app_name" translatable="false">CotQ</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_home_with_menu">HomeWithMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="community">Community</string>
    <string name="details">Details</string>
    <string name="levels">Levels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aman">Aman</string>
    <string name="Account">Account</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="college">College</string>
    <string name="phone_number">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="dob_dd_mm_yyyy">DOB: DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="edit">Edit</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_picture">Edit picture</string>
    <string name="dd_mm_yyyy_m">DD/MM/YYYY</string>
    <string name="sign_in">sign in?</string>
    <string name="sign_up">SIGN UP?</string>
    <string name="forget_password">forget Password?</string>
    <string name="cotq">CotQ</string>
    <string name="password">  Password</string>
    <string name="password1">Password</string>
    <string name="welcome">Welcome</string>
    <string name="click_to_above_for_selecting_date">Double click above to select date</string>
    <string name="edit_profile2">Edit Profile</string>
    <string name="share_profile">Share Profile</string>
    <string name="logout1">LOGOUT From Device.</string>
    <string name="post_feed">Post Feed</string>
    <string name="select_image">Select Image</string>
    <string name="todo0">TODO</string>
    <string name="_1">1</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_6">Level 6</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
</resources>