<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".about_fragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_profile_clicking"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/btn_username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints=""/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/name"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_Name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/gender"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dob"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/college"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_College_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints="" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/email"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_mEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_gravity="center"
            android:text="@string/edit"
            android:drawableLeft="@drawable/edit_btn"
            android:backgroundTint="#953232"
            />
        <Button
            android:id="@+id/btn_Logout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:backgroundTint="#953232"
            />

    </LinearLayout>


</LinearLayout>