<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".postActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/post_feed"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/carbon_black"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/btn_save_post"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_send_24"
                android:layout_gravity="end"
                android:clickable="true"
                android:backgroundTint="@color/white"
                android:padding="5dp"
                tools:ignore="ContentDescription"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:layout_height=".19dp"
        android:background="#B6B6B6"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:id="@+id/btn_profile_post"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/profile" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/btn_Name_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/btn_college_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:autofillHints=""
                android:text="@string/college"
                android:textStyle="italic"
                android:textColor="#575757"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:textAlignment="viewStart"
            android:textColorHint="#7A8089"
            app:helperText="Write something you want to post..."
            app:boxStrokeColor="@color/black"
            app:helperTextEnabled="true"
            app:helperTextTextColor="#6A6A6A"
            app:counterEnabled="true"
            app:counterTextColor="@color/black"
            tools:ignore="HardcodedText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/btn_write_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="#000000" />


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <View
                android:layout_width="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="100dp"
                android:layout_height="1dp"
                android:background="#B6B6B6"/>


            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">


                <ImageView
                    android:id="@+id/myImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="70dp"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/ic_baseline_image_24"
                    android:contentDescription="@string/todo0" />

                <TextView
                    android:id="@+id/myImageViewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/myImageView"
                    android:layout_alignTop="@+id/myImageView"
                    android:layout_alignEnd="@+id/myImageView"
                    android:layout_alignBottom="@+id/myImageView"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:gravity="center"
                    android:text="@string/select_image"
                    android:textColor="#000000" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="130dp"
                android:layout_marginEnd="100dp"
                android:layout_height="1dp"
                android:background="#B6B6B6"/>


        </LinearLayout>








</LinearLayout>